<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/edit_info"
    tools:context="com.example.appinventiv.finalmvpdemo.samplenotification.NotificationInfoActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/todo"
                android:layout_height="wrap_content"
                android:hint="@string/todo"
                android:maxLines="1"
                android:inputType="text"
                android:ellipsize="end"
                android:textSize="@dimen/sp_21"
                android:textColor="@android:color/black"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="text"
                android:textSize="@dimen/sp_21"
                android:textColor="@android:color/black"

                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/date"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:clickable="true"
                android:focusable="false"
                android:textSize="@dimen/sp_21"
                android:textColor="@android:color/black"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/time"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:clickable="true"
                android:focusable="false"
                android:textSize="@dimen/sp_21"
                android:textColor="@android:color/black"

                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginTop="@dimen/dp_15"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:background="@drawable/btn_circular_corner_red"
            />
    </LinearLayout>

</LinearLayout>
